syntax = "proto3";

package libimmds;
option go_package = "./libimmds";

message TxIdList {
        repeated string TxID = 1;
}
